# marine-route-actuary

./: .gitignore  README.md  pyproject.toml
output/jupyter-notebook/: marine-route-actuary-quick-test.ipynb
src/marine_route_actuary/: __init__.py  core.py
tests/: test_core.py
